apps/go-puller/go-puller-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyAll-policy
  namespace: ai
spec:
  podSelector:
    matchLabels:
      app: go-puller
  policyTypes:
    - Ingress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-nextcloud-policy
  namespace: ai
spec:
  podSelector:
    matchLabels:
      app: go-puller
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: nextcloud
        podSelector:
          matchLabels:
            app: nextcloud
      ports:
          - protocol: TCP
            port: 80
          - protocol: TCP
            port: 443

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-whisper-policy
  namespace: ai
spec:
  podSelector:
    matchLabels:
      app: go-puller
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: whisper
      ports:
        - protocol: TCP
          port: 8000

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-ollama-policy
  namespace: ai 
spec:
  podSelector:
    matchLabels:
      app: go-puller
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ollama
      ports:
        - protocol: TCP
          port: 11434

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-coredns-policy
  namespace: ai 
spec:
  podSelector:
    matchLabels:
      app: go-puller
  policyTypes:
    - Egress

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
